--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 
             .word__definition {
                 font-size: 1.25rem;
+                line-height: 1.25;
+                margin-left: 16px;
+                margin-top: 8px;
             }
         </style>
     </head>
@@ -82,9 +85,7 @@
                         marked by the characteristics of an earlier period; antiquated:
                     </dd>
                 </div>
-
             </dl>
-
         </main>
 
         <template id="definition-template">
