--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Dictionary PWA</title>
+        <link rel="shortcut icon" type="image/png" href="./icons/icon-16x16.png">
+        <link rel="manifest" href="./manifest.json">
         <style>
             * {
                 box-sizing: border-box;
@@ -37,6 +42,7 @@
 
             .header__input {
                 font-size: 1.5rem;
+                width: 50%;
             }
 
             .header__search-button {
