--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dictionary PWA</title>
         <link rel="shortcut icon" type="image/png" href="./icons/icon-16x16.png">
+
         <link rel="manifest" href="./manifest.json">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="Dictionary PWA">
+        <link rel="apple-touch-icon" href="./icons/icon-152x152.png">
         <style>
             * {
                 box-sizing: border-box;
