--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             }
 
             .header__input {
-                font-size: 1.5rem;
+                font-size: 20px;
             }
 
             .header__input_label {
